package com.example.demo;

import org.springframework.data.jpa.repository.JpaRepository;

public interface AttributeRankingRepository extends JpaRepository<AttributeRanking, Long> {
}