package com.example.demo;

import org.springframework.data.jpa.repository.JpaRepository;

public interface GenderSelectionRepository extends JpaRepository<GenderSelection, Long> {
}
